src/parser/FOOLParser.java
// Generated from FOOL.g4 by ANTLR 4.6
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FOOLParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            SEMIC = 1, COLON = 2, COMMA = 3, EQ = 4, ASM = 5, PLUS = 6, TIMES = 7, TRUE = 8, FALSE = 9,
            LPAR = 10, RPAR = 11, CLPAR = 12, CRPAR = 13, IF = 14, THEN = 15, ELSE = 16, PRINT = 17,
            LET = 18, IN = 19, VAR = 20, FUN = 21, INT = 22, BOOL = 23, MINUS = 24, DIVISION = 25,
            GREATER = 26, LESS = 27, GREATEREQUAL = 28, LESSEQUAL = 29, OR = 30, AND = 31, NOT = 32,
            END = 33, VOID = 34, CLASS = 35, THIS = 36, NEW = 37, DOT = 38, EXTENDS = 39, NULL = 40,
            INTEGER = 41, ID = 42, WS = 43, LINECOMMENTS = 44, BLOCKCOMMENTS = 45;
    public static final int
            RULE_prog = 0, RULE_classdec = 1, RULE_let = 2, RULE_letVar = 3, RULE_vardec = 4,
            RULE_varasm = 5, RULE_fun = 6, RULE_dec = 7, RULE_type = 8, RULE_exp = 9,
            RULE_term = 10, RULE_factor = 11, RULE_stm = 12, RULE_stms = 13, RULE_value = 14;
    public static final String[] ruleNames = {
            "prog", "classdec", "let", "letVar", "vardec", "varasm", "fun", "dec",
            "type", "exp", "term", "factor", "stm", "stms", "value"
    };

    private static final String[] _LITERAL_NAMES = {
            null, "';'", "':'", "','", "'=='", "'='", "'+'", "'*'", "'true'", "'false'",
            "'('", "')'", "'{'", "'}'", "'if'", "'then'", "'else'", "'print'", "'let'",
            "'in'", "'var'", "'fun'", "'int'", "'bool'", "'-'", "'/'", "'>'", "'<'",
            "'>='", "'<='", "'||'", "'&&'", "'not'", "'end'", "'void'", "'class'",
            "'this'", "'new'", "'.'", "'extends'", "'null'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, "SEMIC", "COLON", "COMMA", "EQ", "ASM", "PLUS", "TIMES", "TRUE",
            "FALSE", "LPAR", "RPAR", "CLPAR", "CRPAR", "IF", "THEN", "ELSE", "PRINT",
            "LET", "IN", "VAR", "FUN", "INT", "BOOL", "MINUS", "DIVISION", "GREATER",
            "LESS", "GREATEREQUAL", "LESSEQUAL", "OR", "AND", "NOT", "END", "VOID",
            "CLASS", "THIS", "NEW", "DOT", "EXTENDS", "NULL", "INTEGER", "ID", "WS",
            "LINECOMMENTS", "BLOCKCOMMENTS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "FOOL.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public FOOLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgContext extends ParserRuleContext {
        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        public ProgContext() {
        }

        public void copyFrom(ProgContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ClassExpContext extends ProgContext {
        public List<ClassdecContext> classdec() {
            return getRuleContexts(ClassdecContext.class);
        }

        public ClassdecContext classdec(int i) {
            return getRuleContext(ClassdecContext.class, i);
        }

        public LetContext let() {
            return getRuleContext(LetContext.class, 0);
        }

        public List<ExpContext> exp() {
            return getRuleContexts(ExpContext.class);
        }

        public ExpContext exp(int i) {
            return getRuleContext(ExpContext.class, i);
        }

        public List<TerminalNode> SEMIC() {
            return getTokens(FOOLParser.SEMIC);
        }

        public TerminalNode SEMIC(int i) {
            return getToken(FOOLParser.SEMIC, i);
        }

        public List<StmsContext> stms() {
            return getRuleContexts(StmsContext.class);
        }

        public StmsContext stms(int i) {
            return getRuleContext(StmsContext.class, i);
        }

        public ClassExpContext(ProgContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitClassExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class LetInExpContext extends ProgContext {
        public LetContext let() {
            return getRuleContext(LetContext.class, 0);
        }

        public List<ExpContext> exp() {
            return getRuleContexts(ExpContext.class);
        }

        public ExpContext exp(int i) {
            return getRuleContext(ExpContext.class, i);
        }

        public List<TerminalNode> SEMIC() {
            return getTokens(FOOLParser.SEMIC);
        }

        public TerminalNode SEMIC(int i) {
            return getToken(FOOLParser.SEMIC, i);
        }

        public List<StmsContext> stms() {
            return getRuleContexts(StmsContext.class);
        }

        public StmsContext stms(int i) {
            return getRuleContext(StmsContext.class, i);
        }

        public LetInExpContext(ProgContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitLetInExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class SingleExpContext extends ProgContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public TerminalNode SEMIC() {
            return getToken(FOOLParser.SEMIC, 0);
        }

        public SingleExpContext(ProgContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitSingleExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            setState(58);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case TRUE:
                case FALSE:
                case LPAR:
                case IF:
                case MINUS:
                case NOT:
                case NEW:
                case NULL:
                case INTEGER:
                case ID:
                    _localctx = new SingleExpContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(30);
                    exp();
                    setState(31);
                    match(SEMIC);
                }
                break;
                case LET:
                    _localctx = new LetInExpContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(33);
                    let();
                    setState(38);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            setState(38);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                                case 1: {
                                    setState(34);
                                    exp();
                                    setState(35);
                                    match(SEMIC);
                                }
                                break;
                                case 2: {
                                    setState(37);
                                    stms();
                                }
                                break;
                            }
                        }
                        setState(40);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << LPAR) | (1L << IF) | (1L << MINUS) | (1L << NOT) | (1L << NEW) | (1L << NULL) | (1L << INTEGER) | (1L << ID))) != 0));
                }
                break;
                case CLASS:
                    _localctx = new ClassExpContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(43);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(42);
                                classdec();
                            }
                        }
                        setState(45);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == CLASS);
                    setState(56);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == LET) {
                        {
                            setState(47);
                            let();
                            setState(52);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            do {
                                {
                                    setState(52);
                                    _errHandler.sync(this);
                                    switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                                        case 1: {
                                            setState(48);
                                            exp();
                                            setState(49);
                                            match(SEMIC);
                                        }
                                        break;
                                        case 2: {
                                            setState(51);
                                            stms();
                                        }
                                        break;
                                    }
                                }
                                setState(54);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                            while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << LPAR) | (1L << IF) | (1L << MINUS) | (1L << NOT) | (1L << NEW) | (1L << NULL) | (1L << INTEGER) | (1L << ID))) != 0));
                        }
                    }

                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ClassdecContext extends ParserRuleContext {
        public TerminalNode CLASS() {
            return getToken(FOOLParser.CLASS, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(FOOLParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(FOOLParser.ID, i);
        }

        public TerminalNode SEMIC() {
            return getToken(FOOLParser.SEMIC, 0);
        }

        public TerminalNode EXTENDS() {
            return getToken(FOOLParser.EXTENDS, 0);
        }

        public TerminalNode LPAR() {
            return getToken(FOOLParser.LPAR, 0);
        }

        public List<VardecContext> vardec() {
            return getRuleContexts(VardecContext.class);
        }

        public VardecContext vardec(int i) {
            return getRuleContext(VardecContext.class, i);
        }

        public TerminalNode RPAR() {
            return getToken(FOOLParser.RPAR, 0);
        }

        public TerminalNode CLPAR() {
            return getToken(FOOLParser.CLPAR, 0);
        }

        public TerminalNode CRPAR() {
            return getToken(FOOLParser.CRPAR, 0);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(FOOLParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(FOOLParser.COMMA, i);
        }

        public List<FunContext> fun() {
            return getRuleContexts(FunContext.class);
        }

        public FunContext fun(int i) {
            return getRuleContext(FunContext.class, i);
        }

        public ClassdecContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_classdec;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitClassdec(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ClassdecContext classdec() throws RecognitionException {
        ClassdecContext _localctx = new ClassdecContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_classdec);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(60);
                match(CLASS);
                setState(61);
                match(ID);
                setState(64);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == EXTENDS) {
                    {
                        setState(62);
                        match(EXTENDS);
                        setState(63);
                        match(ID);
                    }
                }

                setState(77);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LPAR) {
                    {
                        setState(66);
                        match(LPAR);
                        setState(67);
                        vardec();
                        setState(72);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(68);
                                    match(COMMA);
                                    setState(69);
                                    vardec();
                                }
                            }
                            setState(74);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(75);
                        match(RPAR);
                    }
                }

                setState(87);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == CLPAR) {
                    {
                        setState(79);
                        match(CLPAR);
                        setState(81);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(80);
                                    fun();
                                }
                            }
                            setState(83);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << VOID) | (1L << ID))) != 0));
                        setState(85);
                        match(CRPAR);
                    }
                }

                setState(89);
                match(SEMIC);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LetContext extends ParserRuleContext {
        public TerminalNode LET() {
            return getToken(FOOLParser.LET, 0);
        }

        public TerminalNode IN() {
            return getToken(FOOLParser.IN, 0);
        }

        public List<DecContext> dec() {
            return getRuleContexts(DecContext.class);
        }

        public DecContext dec(int i) {
            return getRuleContext(DecContext.class, i);
        }

        public LetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_let;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitLet(this);
            else return visitor.visitChildren(this);
        }
    }

    public final LetContext let() throws RecognitionException {
        LetContext _localctx = new LetContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_let);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(91);
                match(LET);
                setState(93);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(92);
                            dec();
                        }
                    }
                    setState(95);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << VOID) | (1L << ID))) != 0));
                setState(97);
                match(IN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LetVarContext extends ParserRuleContext {
        public TerminalNode LET() {
            return getToken(FOOLParser.LET, 0);
        }

        public TerminalNode IN() {
            return getToken(FOOLParser.IN, 0);
        }

        public List<VarasmContext> varasm() {
            return getRuleContexts(VarasmContext.class);
        }

        public VarasmContext varasm(int i) {
            return getRuleContext(VarasmContext.class, i);
        }

        public LetVarContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_letVar;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitLetVar(this);
            else return visitor.visitChildren(this);
        }
    }

    public final LetVarContext letVar() throws RecognitionException {
        LetVarContext _localctx = new LetVarContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_letVar);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(99);
                match(LET);
                setState(101);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(100);
                            varasm();
                        }
                    }
                    setState(103);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << VOID) | (1L << ID))) != 0));
                setState(105);
                match(IN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VardecContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(FOOLParser.ID, 0);
        }

        public VardecContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_vardec;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitVardec(this);
            else return visitor.visitChildren(this);
        }
    }

    public final VardecContext vardec() throws RecognitionException {
        VardecContext _localctx = new VardecContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_vardec);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(107);
                type();
                setState(108);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VarasmContext extends ParserRuleContext {
        public VardecContext vardec() {
            return getRuleContext(VardecContext.class, 0);
        }

        public TerminalNode ASM() {
            return getToken(FOOLParser.ASM, 0);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public TerminalNode SEMIC() {
            return getToken(FOOLParser.SEMIC, 0);
        }

        public VarasmContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_varasm;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitVarasm(this);
            else return visitor.visitChildren(this);
        }
    }

    public final VarasmContext varasm() throws RecognitionException {
        VarasmContext _localctx = new VarasmContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_varasm);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(110);
                vardec();
                setState(111);
                match(ASM);
                setState(112);
                exp();
                setState(113);
                match(SEMIC);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FunContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(FOOLParser.ID, 0);
        }

        public TerminalNode LPAR() {
            return getToken(FOOLParser.LPAR, 0);
        }

        public TerminalNode RPAR() {
            return getToken(FOOLParser.RPAR, 0);
        }

        public TerminalNode CLPAR() {
            return getToken(FOOLParser.CLPAR, 0);
        }

        public TerminalNode CRPAR() {
            return getToken(FOOLParser.CRPAR, 0);
        }

        public List<VardecContext> vardec() {
            return getRuleContexts(VardecContext.class);
        }

        public VardecContext vardec(int i) {
            return getRuleContext(VardecContext.class, i);
        }

        public LetVarContext letVar() {
            return getRuleContext(LetVarContext.class, 0);
        }

        public List<ExpContext> exp() {
            return getRuleContexts(ExpContext.class);
        }

        public ExpContext exp(int i) {
            return getRuleContext(ExpContext.class, i);
        }

        public List<TerminalNode> SEMIC() {
            return getTokens(FOOLParser.SEMIC);
        }

        public TerminalNode SEMIC(int i) {
            return getToken(FOOLParser.SEMIC, i);
        }

        public List<StmsContext> stms() {
            return getRuleContexts(StmsContext.class);
        }

        public StmsContext stms(int i) {
            return getRuleContext(StmsContext.class, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(FOOLParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(FOOLParser.COMMA, i);
        }

        public FunContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_fun;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitFun(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FunContext fun() throws RecognitionException {
        FunContext _localctx = new FunContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_fun);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(115);
                type();
                setState(116);
                match(ID);
                setState(117);
                match(LPAR);
                setState(126);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << VOID) | (1L << ID))) != 0)) {
                    {
                        setState(118);
                        vardec();
                        setState(123);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(119);
                                    match(COMMA);
                                    setState(120);
                                    vardec();
                                }
                            }
                            setState(125);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(128);
                match(RPAR);
                setState(130);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LET) {
                    {
                        setState(129);
                        letVar();
                    }
                }

                setState(132);
                match(CLPAR);
                setState(137);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        setState(137);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 17, _ctx)) {
                            case 1: {
                                setState(133);
                                exp();
                                setState(134);
                                match(SEMIC);
                            }
                            break;
                            case 2: {
                                setState(136);
                                stms();
                            }
                            break;
                        }
                    }
                    setState(139);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << LPAR) | (1L << IF) | (1L << MINUS) | (1L << NOT) | (1L << NEW) | (1L << NULL) | (1L << INTEGER) | (1L << ID))) != 0));
                setState(141);
                match(CRPAR);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DecContext extends ParserRuleContext {
        public DecContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dec;
        }

        public DecContext() {
        }

        public void copyFrom(DecContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class VarAssignmentContext extends DecContext {
        public VarasmContext varasm() {
            return getRuleContext(VarasmContext.class, 0);
        }

        public VarAssignmentContext(DecContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitVarAssignment(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class FunDeclarationContext extends DecContext {
        public FunContext fun() {
            return getRuleContext(FunContext.class, 0);
        }

        public FunDeclarationContext(DecContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitFunDeclaration(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DecContext dec() throws RecognitionException {
        DecContext _localctx = new DecContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_dec);
        try {
            setState(145);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 19, _ctx)) {
                case 1:
                    _localctx = new VarAssignmentContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(143);
                    varasm();
                }
                break;
                case 2:
                    _localctx = new FunDeclarationContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(144);
                    fun();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TypeContext extends ParserRuleContext {
        public TerminalNode INT() {
            return getToken(FOOLParser.INT, 0);
        }

        public TerminalNode BOOL() {
            return getToken(FOOLParser.BOOL, 0);
        }

        public TerminalNode VOID() {
            return getToken(FOOLParser.VOID, 0);
        }

        public TerminalNode ID() {
            return getToken(FOOLParser.ID, 0);
        }

        public TypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitType(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TypeContext type() throws RecognitionException {
        TypeContext _localctx = new TypeContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_type);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(147);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << VOID) | (1L << ID))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExpContext extends ParserRuleContext {
        public TermContext left;
        public ExpContext right;

        public TermContext term() {
            return getRuleContext(TermContext.class, 0);
        }

        public TerminalNode PLUS() {
            return getToken(FOOLParser.PLUS, 0);
        }

        public TerminalNode MINUS() {
            return getToken(FOOLParser.MINUS, 0);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public ExpContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_exp;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ExpContext exp() throws RecognitionException {
        ExpContext _localctx = new ExpContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_exp);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(149);
